Set time and date section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planner</title>
-  <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <script src="./index.js" ></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Planner</title>
+    <link rel="stylesheet" href="./src/css/styles.css" />
+  </head>
+  <body>
+    <div class="clock-container">
+      <div class="date"></div>
+      <div class="clock"></div>
+    </div>
+    <script src="./src/js/index.js"></script>
+  </body>
 </html>
