--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <div class="date"></div>
       <div class="clock"></div>
     </div>
+    <div class="name-container">
+      <div class="ask">What's your name?</div>
+      <input type="text" class="name" placeholder="Enter your name" />
+    </div>
     <script src="./src/js/index.js"></script>
   </body>
 </html>
