adjust style for user form

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       <div class="date"></div>
       <div class="clock"></div>
     </div>
-    <div class="name-container">
+    <form class="name-container">
       <div class="ask">What's your name?</div>
       <input type="text" class="name" placeholder="Enter your name" />
-    </div>
-    <script src="./src/js/index.js"></script>
+    </form>
+    <script src="./src/js/clock.js"></script>
+    <script src="./src/js/user.js"></script>
   </body>
 </html>
