--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="ask">What's your name?</div>
       <input type="text" class="name" placeholder="Enter your name" />
     </form>
+
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/user.js"></script>
+    <script src="./src/js/background.js"></script>
   </body>
 </html>
