--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/user.js"></script>
     <script src="./src/js/background.js"></script>
+    <script src="./src/js/menue.js"></script>
+    <script src="./src/js/weather.js"></script>
+    <script src="./src/js/task.js"></script>
+    <script src="./src/js/pending.js"></script>
+    <script src="./src/js/finished.js"></script>
+    <script src="./src/js/loadTask.js"></script>
+    <script src="./src/js/moveTask.js"></script>
   </body>
 </html>
