amend styles for checkbox and task

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <script src="./src/js/pending.js"></script>
     <script src="./src/js/finished.js"></script>
     <script src="./src/js/loadTask.js"></script>
-    <script src="./src/js/moveTask.js"></script>
+    <script src="./src/js/date.js"></script>
   </body>
 </html>
