--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <div class="ask">What's your name?</div>
       <input type="text" class="name" placeholder="Enter your name" />
     </form>
-
+    <div class="weather"></div>
     <script src="./src/js/clock.js"></script>
     <script src="./src/js/user.js"></script>
     <script src="./src/js/background.js"></script>
-    <script src="./src/js/menue.js"></script>
     <script src="./src/js/weather.js"></script>
     <script src="./src/js/task.js"></script>
     <script src="./src/js/pending.js"></script>
     <script src="./src/js/finished.js"></script>
     <script src="./src/js/loadTask.js"></script>
     <script src="./src/js/date.js"></script>
+    <script src="./src/js/calender.js"></script>
   </body>
 </html>
