--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="./src/js/finished.js"></script>
     <script src="./src/js/loadTask.js"></script>
     <script src="./src/js/date.js"></script>
+    <script src="./src/js/setCalender.js"></script>
     <script src="./src/js/calender.js"></script>
   </body>
 </html>
