--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="./src/js/finished.js"></script>
     <script src="./src/js/loadTask.js"></script>
     <script src="./src/js/date.js"></script>
-    <script src="./src/js/setCalender.js"></script>
-    <script src="./src/js/calender.js"></script>
+    <script src="./src/js/setCalendar.js"></script>
+    <script src="./src/js/calendar.js"></script>
   </body>
 </html>
